create user table and schema

--- a/sinatra_portfolio_creator/app/views/layout.erb
+++ b/sinatra_portfolio_creator/app/views/layout.erb
@@ -15,7 +15,7 @@
   </head>
   <body>
     <div class="wrapper">
-
+      <h1>Portfolio List</h1>
         <%= yield %>
 
       <footer class="branding">
