--- a/sinatra_portfolio_creator/app/views/layout.erb
+++ b/sinatra_portfolio_creator/app/views/layout.erb
@@ -17,6 +17,8 @@
     <div class="wrapper">
       <h1>Portfolio List</h1>
         <%= yield %>
+        <p><a href="/signup">Signup</a></p>
+        <p><a href="/login">Login</a></p>
 
       <footer class="branding">
         <small>&copy; 2020 <strong>SinatraPortfolioCreator</strong></small>
