--- a/sinatra_portfolio_creator/app/views/index.erb
+++ b/sinatra_portfolio_creator/app/views/index.erb
@@ -1,1 +1,1 @@
-<h2>Hello, <%= @user.username %>, welcome to your porfolio of projects</h2>
+<h2>Hello,<%= current_user.username %>. Welcome to your porfolio of projects</h2>
