add log out functionality

--- a/sinatra_portfolio_creator/app/views/layout.erb
+++ b/sinatra_portfolio_creator/app/views/layout.erb
@@ -19,6 +19,7 @@
         <%= yield %>
         <p><a href="/signup">Signup</a></p>
         <p><a href="/login">Login</a></p>
+        <p><a href="/logout">Logout</a></p>
 
       <footer class="branding">
         <small>&copy; 2020 <strong>SinatraPortfolioCreator</strong></small>
