--- a/sinatra_portfolio_creator/app/views/projects/index.erb
+++ b/sinatra_portfolio_creator/app/views/projects/index.erb
@@ -1,5 +1,5 @@
 <% @projects.each_with_index do |project, index| %>
     <h4><%= index + 1%>. <%= project.title %></h4>
     <p><%# project.description %></p>
-
+    <p><a href="/projects/new">Create a project</a></p>
 <% end%>
