add new project ddetails

--- a/sinatra_portfolio_creator/app/views/projects/new.erb
+++ b/sinatra_portfolio_creator/app/views/projects/new.erb
@@ -1,5 +1,5 @@
 <h2>Enter new project details:</h2>
-<form>
+<form action="/projects" method="post">
     <div class="container">
       <div class="row">
         <div class="col-4">
@@ -77,6 +77,4 @@
         </div>
       </div>
     </div>
-    rake db:create_migration NAME=add_sinatra_to_projects
-  
 </form>
