--- a/sinatra_portfolio_creator/app/views/projects/index.erb
+++ b/sinatra_portfolio_creator/app/views/projects/index.erb
@@ -1,5 +1,7 @@
+<p><a href="/projects/new">Create a project</a></p>
 <% @projects.each_with_index do |project, index| %>
     <h4><%= index + 1%>. <%= project.title %></h4>
-    <p><%# project.description %></p>
-    <p><a href="/projects/new">Create a project</a></p>
+    <p><%= project.description %></p>
+    <p>Creator: <%= User.find_by(id: project.user_id).username %></p>
+    <p><a href="/projects/<%= project.id %>/edit">Edit</a></p>
 <% end%>
