--- a/sinatra_portfolio_creator/app/views/layout.erb
+++ b/sinatra_portfolio_creator/app/views/layout.erb
@@ -17,6 +17,7 @@
     <div class="wrapper">
     
       <div class="row">
+        <div class="col-1"></div>
         <div class="col-3">
         <h1>Portfolio List</h1>
         </div>
