--- a/sinatra_portfolio_creator/app/views/welcome.erb
+++ b/sinatra_portfolio_creator/app/views/welcome.erb
@@ -1,7 +1,7 @@
 <div class="container">
   
   <div class="col-md-8 col-md-offset-2">
-    
+    <h2>Welcome to the Porfolio Creator! Click Signup or Login to create an account and begin creating projects for your portfolio!</h2>
 
   </div>
 </div>
